@@ -33,7 +33,6 @@ import java.util.List;
 public class ImportMethod extends ProtoMethod {
 
 	public ProtoObject applyTo(ProtoObject receiver, ProtoObject classMethodWasFoundIn, ProtoObject argument) {
-		System.out.println("import: " + argument.javaValue() + " in to " + receiver);
 		SmalltalkClassLoader smalltalkClassLoader = smalltalkClassLoader();
 		for (SourceFile sourceFile : findSources(smalltalkClassLoader, argument.javaValue()))
 			addAssociationBetweenObjectAndPackage(receiver, sourceFile.shortName(), sourceFile.packageName());
@@ -41,11 +40,10 @@ public class ImportMethod extends ProtoMethod {
 	}
 
 	private void addAssociationBetweenObjectAndPackage(ProtoObject receiver, String className, String packageName) {
-		System.out.println("assoc " + className + " " + makeFullyQualifiedPath(packageName, className));
 		ProtoObject.primitivePackageAtPut(receiver, className, makeFullyQualifiedPath(packageName, className));
 	}
 
-	private String makeFullyQualifiedPath(String packageName, String className) {
+	public static String makeFullyQualifiedPath(String packageName, String className) {
 		return (packageName + File.separatorChar + className).replaceAll("\\" + File.separatorChar, ".");
 	}
 
