@@ -1,8 +1,6 @@
 
-import: 'st.redline.stout'.
-
 Object < #Stout
 
 - handle: action on: target with: request and: response and: dispatch
-  "handle http request type 'verb' on target."
+  "handle http request type 'action' on 'target' uri."
 
