@@ -3,3 +3,6 @@ import: 'st.redline.stout.Stout'.
 
 Stout < #Web
 
+- initialize
+  super initialize
+
