@@ -1,3 +1,8 @@
+26/08/2011 Changes
+
+Implemented import. Moving onto further Stout functionality.
+
+
 24/08/2011 Changes
 
 Adding implementation of import: method.
